# taura

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/commands/: greet.rs  mod.rs  settings.rs
src/lib/: index.ts
src/lib/__tests__/: example.test.ts
src/lib/components/: AppSidebar.svelte  ThemeToggle.svelte
src/lib/stores/: app.svelte.ts  settings.svelte.ts
src/lib/tauri/: commands.ts  events.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/__tests__/: page.test.ts
src/routes/about/: +page.svelte
src/routes/settings/: +page.svelte
